Remove ${topdir}/hoke from PYTHONPATH.
Without this, if we had ${topdir}/hoke/omg.py, it would be importable
both as “hoke.omg” (correct) and as “omg” (incorrect).

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands=flake8 nether
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/nether
+    PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
