--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,19 @@
 # This file will be regenerated if you run travis_pypi_setup.py
 
 language: python
-python: 3.5
-
-env:
-  - TOXENV=py35
-  - TOXENV=py34
-  - TOXENV=py33
+python:
+  - 3.3
+  - 3.4
+  - 3.5
+  - 3.5-dev
+  - 3.6
+  - 3.6-dev
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox
+install: pip install -U tox-travis
 
 # command to run tests, e.g. python setup.py test
-script: tox -e ${TOXENV}
+script: tox
 
 # After you create the Github repo and add it to Travis, run the
 # travis_pypi_setup.py script to finish PyPI deployment setup
@@ -26,4 +27,4 @@ deploy:
   on:
     tags: true
     repo: astralblue/nether
-    condition: $TOXENV == py35
+    python: 3.6
