--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,13 @@
 [tox]
-envlist = py33, py34, py35, flake8
+envlist = py33, py34, py35, py36, flake8
+
+[tox:travis]
+3.3 = py33
+3.4 = py34
+3.5 = py35, flake8
+3.5-dev = py35
+3.6 = py36
+3.6-dev = py36
 
 [testenv:flake8]
 basepython=python
