--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py33, py34, py35, py36, flake8
+envlist = py33, py34, py35, py36, py37, flake8
 
 [tox:travis]
 3.3 = py33
@@ -8,6 +8,7 @@ envlist = py33, py34, py35, py36, flake8
 3.5-dev = py35
 3.6 = py36
 3.6-dev = py36
+3.7 = py37
 
 [testenv:flake8]
 basepython=python
